# mvps

./: Cargo.toml  README.md  run.sh
.github/workflows/: ci.yml
mvps-blob/: Cargo.toml
mvps-blob/src/: blob_crypto.rs  blob_reader.rs  blob_writer.rs  compaction.rs  consts.rs  image.rs  interfaces.rs  lib.rs  util.rs
mvps-blob/src/backend/: local_fs.rs  mod.rs  s3.rs
mvps-blob/src/tests/: blob.rs  image.rs  mod.rs  util.rs
mvps-proto/: Cargo.toml  build.rs
mvps-proto/src/: blob.proto  lib.rs
mvps-s3-gc/: Cargo.toml
mvps-s3-gc/src/: main.rs
mvps-te/: Cargo.toml
mvps-te/src/: caching_image_store.rs  compaction.rs  config.rs  io_planner.rs  layered_store.rs  main.rs  nbd.rs  session_manager.rs
mvps-te/src/bufferstore/: async_txn.rs  mod.rs
mvps-te/src/tests/: layered_store.rs  mod.rs
nbdstress/: Cargo.toml
nbdstress/src/: main.rs  protocol.rs
scripts/: list_blobs_for_image.sh  run_nbdstress.sh  run_s3_gc.sh  zigbuild.sh  zigbuild_aarch64.sh
