[workspace]
members = ["mvps-blob", "mvps-proto", "mvps-s3-gc", "mvps-te", "nbdstress"]
resolver = "2"

[profile.release]
panic = "abort"

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.4.0"
base32 = "0.4"
base64 = "0.21.5"
blake3 = "1.5"
byteorder = "1.5"
bytes = "1.5"
bytestring = { version = "1.3", features = ["serde"] }
chacha20poly1305 = "0.10.1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "5.5"
futures = "0.3"
governor = "0.6"
heed = "0.11"
hex = "0.4"
humansize = "2.1.3"
itertools = "0.12.0"
jsonwebtoken = "9.1"
libc = "0.2"
memmap2 = "0.9.0"
moka = { version = "0.12", features = ["future", "sync"] }
once_cell = "1.18"
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"
rand = "0.8"
regex = "1.10"
rpds = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slab = "0.4.9"
tempdir = "0.3"
tempfile = "3.8.1"
thiserror = "1.0"
tikv-jemallocator = "0.5"
tokio = { version = "1.34", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.15", features = [
  "env-filter",
  "fmt",
  "json",
] }
tracing-test = "0.2"
ulid = "1.1"
zstd = "0.13"
