[package]
name = "mvps-blob"
version = "0.1.2"
edition = "2021"

[dependencies]
mvps-proto = { path = "../mvps-proto" }

aes-gcm = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
base32 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
bytestring = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }
