[package]
name = "mvps-te"
version = "0.1.1"
edition = "2021"
description = "MVPS transaction engine"

[dependencies]
mvps-blob = { path = "../mvps-blob" }
mvps-proto = { path = "../mvps-proto" }

anyhow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
base32 = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
bytestring = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
heed = { workspace = true }
humansize = { workspace = true }
jsonwebtoken = { workspace = true }
memmap2 = { workspace = true }
moka = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rpds = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slab = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }
tracing-test = { workspace = true }
